# ui-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  doc.md  lib_dependencies.cmake  project_options.cmake  test_dependencies.cmake  vcpkg.json
.github/workflows/: test.yml
cmake/: external_dependencies.cmake  project_options.cmake  sanitizers.cmake  ui-lib-config.cmake  warnings.cmake
program/: CMakeLists.txt  asset_test_scene.cpp  asset_test_scene.hpp  focus_test_scene.cpp  focus_test_scene.hpp  font_test_scene.cpp  font_test_scene.hpp  input_test_scene.cpp  input_test_scene.hpp  music_test_scene.cpp  music_test_scene.hpp  temp.cpp  test_scene.cpp  test_scene.hpp
program/include/program/: temp.hpp
py/: main.py
src/: CMakeLists.txt  Window.cpp  alignment.cpp  base_element.cpp  context.cpp  element.cpp  event_manager.cpp  focus_element.cpp  h_rect.cpp  h_vec.cpp  helper_rect.cpp  helper_vec.cpp  link.cpp  rect.cpp  rect_helper.hpp  resolution.cpp  scene.cpp  scene_manager.cpp  temp.cpp  test.cpp  test_element.cpp  test_scene.cpp  text.cpp  ui_element.cpp  update_context.cpp  update_render_helper.cpp  window.cpp
src/debug/: classes.cpp  debug_classes.cpp  fps_draw_debug.cpp
src/elements/: button.cpp  link.cpp  test_element.cpp  text.cpp
src/global/: app_context.cpp  asset.cpp  focus.cpp  font.cpp  input.cpp  resolution.cpp  resolution_enum.cpp  sound.cpp
src/helper/: path.cpp  rect.cpp  vec.cpp
src/include/uil/: Callback.hpp  Exception.hpp  Window.hpp  alignment.hpp  base_element.hpp  base_manager.hpp  callback.hpp  context.hpp  element.hpp  event_manager.hpp  exception.hpp  focus_element.hpp  game_button.hpp  h_rect.hpp  helper_rect.hpp  helper_vec.hpp  link.hpp  rect.hpp  resolution.hpp  scene.hpp  scene_manager.hpp  test.hpp  test_element.hpp  test_scene.hpp  text.hpp  ui_element.hpp  update_context.hpp  update_render_helper.hpp  utils.hpp  window.hpp
src/include/uil/debug/: basic.hpp  classes.hpp  debug.hpp  debug_classes.hpp  debug_types.hpp  debug_wrapper.hpp  fps_draw_debug.hpp  wrapper.hpp
src/include/uil/elements/: button.hpp  link.hpp  test_element.hpp  text.hpp
src/include/uil/global/: app_context.hpp  asset.hpp  focus.hpp  font.hpp  input.hpp  input_enum.hpp  resolution.hpp  resolution_enum.hpp  sound.hpp
src/include/uil/helper/: path.hpp  rect.hpp  vec.hpp
src/include/uil/scenes/: test_scene.hpp
src/scenes/: test_scene.cpp
test/: CMakeLists.txt  Test_Callbacks.cpp  default.cpp  temp-test.cpp  test_alignment.cpp  test_alignment_conversion.cpp  test_alignment_horizontal.cpp  test_alignment_standard.cpp  test_alignment_vertical.cpp  test_callbacks.cpp  test_element_text.cpp  test_exception.cpp  test_rect.cpp  test_resolution.cpp  test_vec.cpp  test_window.cpp
